Fix: correct eas.json schema with root cli and prebuildCommand

--- a/eas.json
+++ b/eas.json
@@ -1,22 +1,19 @@
 {
+  "cli": {
+    "appVersionSource": "app.json"
+  },
   "build": {
     "production": {
       "env": {
         "GOOGLE_SERVICE_PLIST": "@GOOGLE_SERVICE_PLIST"
       },
-      "prebuildCommand": "node ./scripts/write-google-plist.js",
-      "cli": {
-        "appVersionSource": "app.json"
-      }
+      "prebuildCommand": "node ./scripts/write-google-plist.js"
     },
     "development": {
       "env": {
         "GOOGLE_SERVICE_PLIST": "@GOOGLE_SERVICE_PLIST"
       },
-      "prebuildCommand": "node ./scripts/write-google-plist.js",
-      "cli": {
-        "appVersionSource": "app.json"
-      }
+      "prebuildCommand": "node ./scripts/write-google-plist.js"
     }
   },
   "submit": {
