--- a/eas.json
+++ b/eas.json
@@ -1,41 +1,34 @@
 {
   "cli": {
-    "appVersionSource": "app.json"
+    "appVersionSource": "remote"
   },
   "build": {
     "production": {
       "env": {
         "GOOGLE_SERVICE_PLIST": "@GOOGLE_SERVICE_PLIST"
       },
-      "resourceClass": "m-medium",
+      "resourceClass": "medium",
       "autoIncrement": true,
       "distribution": "internal",
       "ios": {
         "simulator": false
       },
-      "channel": "production",
-      "hooks": {
-        "pre-install": "./prebuild-ios.sh"
-      }
+      "channel": "production"
     },
     "development": {
       "env": {
         "GOOGLE_SERVICE_PLIST": "@GOOGLE_SERVICE_PLIST"
       },
-      "resourceClass": "m-medium",
+      "resourceClass": "medium",
       "autoIncrement": true,
       "distribution": "internal",
       "ios": {
         "simulator": false
       },
-      "channel": "development",
-      "hooks": {
-        "pre-install": "./prebuild-ios.sh"
-      }
+      "channel": "development"
     }
   },
   "submit": {
     "production": {}
   }
 }
-
