Add expo-cli as dev dependency for iOS build

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-build-properties": "~0.14.8",
     "expo-dev-client": "~5.2.4",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.17",
     "firebase": "^12.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "expo-cli": "^6.3.12",
     "typescript": "~5.8.3"
   },
   "private": true
