Use local Expo CLI on EAS

--- a/eas.json
+++ b/eas.json
@@ -1,16 +1,59 @@
 {
+  "cli": {
+    "appVersionSource": "remote"
+  },
   "build": {
     "production": {
       "env": {
-        "GOOGLE_SERVICE_PLIST": "@GOOGLE_SERVICE_PLIST"
+        "GOOGLE_SERVICE_PLIST": "@GOOGLE_SERVICE_PLIST",
+        "EXPO_USE_LOCAL_CLI": "1"
       },
-      "prebuildCommand": "node ./scripts/write-google-plist.js"
+      "resourceClass": "medium",
+      "autoIncrement": true,
+      "distribution": "store",
+      "ios": {
+        "simulator": false
+      },
+      "channel": "production",
+      "prebuildCommand": "node ./scripts/write-google-plist.js",
+      "cache": {
+        "disabled": true
+      }
+    },
+    "staging": {
+      "env": {
+        "GOOGLE_SERVICE_PLIST": "@GOOGLE_SERVICE_PLIST",
+        "EXPO_USE_LOCAL_CLI": "1"
+      },
+      "resourceClass": "medium",
+      "autoIncrement": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": false
+      },
+      "channel": "staging",
+      "prebuildCommand": "node ./scripts/write-google-plist.js",
+      "cache": {
+        "disabled": true
+      }
     },
     "development": {
       "env": {
-        "GOOGLE_SERVICE_PLIST": "@GOOGLE_SERVICE_PLIST"
+        "GOOGLE_SERVICE_PLIST": "@GOOGLE_SERVICE_PLIST",
+        "EXPO_USE_LOCAL_CLI": "1"
       },
-      "prebuildCommand": "node ./scripts/write-google-plist.js"
+      "resourceClass": "medium",
+      "autoIncrement": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      },
+      "channel": "development",
+      "prebuildCommand": "node ./scripts/write-google-plist.js",
+      "cache": {
+        "disabled": true
+      },
+      "developmentClient": true
     }
   },
   "submit": {
