Fix runtimeVersion duplication in app.json

--- a/app.json
+++ b/app.json
@@ -3,10 +3,13 @@
     "name": "DormDate",
     "slug": "DormDate",
     "version": "1.0.0",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -47,6 +50,11 @@
         }
       ]
     ],
-    "owner": "jackhood"
+    "owner": "jackhood",
+    "updates": {
+      "url": "https://u.expo.dev/66223767-44b0-4693-ad52-354579e5f74f"
+    }
   }
 }
+
+
