Fix runtimeVersion for bare workflow

--- a/app.json
+++ b/app.json
@@ -3,9 +3,7 @@
     "name": "DormDate",
     "slug": "DormDate",
     "version": "1.0.0",
-    "runtimeVersion": {
-      "policy": "appVersion"
-    },
+    "runtimeVersion": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -56,5 +54,6 @@
     }
   }
 }
+
 
 
