Fix .gitattributes encoding/content

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
-﻿# force LF endings for iOS/Unix scripts
+# Normalize line endings
+* text=auto
+
+# Force LF endings for iOS/Unix scripts
 *.sh text eol=lf
 *.rb text eol=lf
 *.env text eol=lf
