--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,4 @@
-# Normalize line endings
-* text=auto
-
-# Force LF endings for iOS/Unix scripts
+﻿# force LF endings for iOS/Unix scripts
 *.sh text eol=lf
 *.rb text eol=lf
 *.env text eol=lf
