--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-firebase/app": "^23.1.2",
+    "@react-native-firebase/auth": "^23.1.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "expo": "~53.0.22",
@@ -18,7 +20,7 @@
     "expo-dev-client": "~5.2.4",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.17",
-    "firebase": "^10.14.1",
+    "firebase": "^12.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
