--- a/ios/DormDate/GoogleService-Info.plist
+++ b/ios/DormDate/GoogleService-Info.plist
@@ -2,21 +2,29 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>GCM_SENDER_ID</key>
-  <string>000000000000</string>
-  <key>PLIST_VERSION</key>
-  <string>1</string>
-  <key>BUNDLE_ID</key>
-  <string>com.example.dummy</string>
-  <key>PROJECT_ID</key>
-  <string>dummy-project</string>
-  <key>STORAGE_BUCKET</key>
-  <string>dummy.appspot.com</string>
-  <key>IS_ADS_ENABLED</key>
-  <false/>
-  <key>IS_ANALYTICS_ENABLED</key>
-  <false/>
+	<key>API_KEY</key>
+	<string>AIzaSyBmed-XNnB88BWOodO9s1Vkh5qVRGo5V5E</string>
+	<key>GCM_SENDER_ID</key>
+	<string>741292322358</string>
+	<key>PLIST_VERSION</key>
+	<string>1</string>
+	<key>BUNDLE_ID</key>
+	<string>com.jackhood.DormDate</string>
+	<key>PROJECT_ID</key>
+	<string>dormdate-14a3b</string>
+	<key>STORAGE_BUCKET</key>
+	<string>dormdate-14a3b.firebasestorage.app</string>
+	<key>IS_ADS_ENABLED</key>
+	<false></false>
+	<key>IS_ANALYTICS_ENABLED</key>
+	<false></false>
+	<key>IS_APPINVITE_ENABLED</key>
+	<true></true>
+	<key>IS_GCM_ENABLED</key>
+	<true></true>
+	<key>IS_SIGNIN_ENABLED</key>
+	<true></true>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:741292322358:ios:8549a46f6208a62bc27297</string>
 </dict>
 </plist>
-
-
