--- a/package.json
+++ b/package.json
@@ -1,41 +1,40 @@
 {
-  "name": "dormdate",
-  "version": "1.0.0",
-  "main": "index.ts",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-firebase/app": "^23.3.1",
-    "@react-native-firebase/auth": "^23.3.1",
-    "@react-navigation/bottom-tabs": "^7.4.7",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/native-stack": "^7.3.26",
-    "expo": "~53.0.22",
-    "expo-build-properties": "~0.14.8",
-    "expo-dev-client": "~5.2.4",
-    "expo-status-bar": "~2.2.3",
-    "expo-updates": "~0.28.17",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "^4.1.3",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0",
-    "react-native-worklets-core": "^1.6.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "expo-cli": "^6.3.12",
-    "typescript": "~5.8.3"
-  },
-  "private": true
+    "name": "dormdate",
+    "version": "1.0.0",
+    "main": "index.ts",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo run:android",
+        "ios": "expo run:ios",
+        "web": "expo start --web",
+        "eas-build-pre-install": "cd ios && pod repo update"
+    },
+    "dependencies": {
+        "@expo/metro-runtime": "~5.0.4",
+        "@react-native-async-storage/async-storage": "2.1.2",
+        "@react-native-firebase/app": "^23.3.1",
+        "@react-native-firebase/auth": "^23.3.1",
+        "@react-navigation/bottom-tabs": "^7.4.7",
+        "@react-navigation/native": "^7.1.17",
+        "@react-navigation/native-stack": "^7.3.26",
+        "expo": "~53.0.22",
+        "expo-build-properties": "~0.14.8",
+        "expo-dev-client": "~5.2.4",
+        "expo-status-bar": "~2.2.3",
+        "expo-updates": "~0.28.17",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
+        "react-native": "0.79.5",
+        "react-native-gesture-handler": "~2.24.0",
+        "react-native-safe-area-context": "5.4.0",
+        "react-native-screens": "~4.11.1",
+        "react-native-web": "^0.20.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.25.2",
+        "@types/react": "~19.0.10",
+        "expo-cli": "^6.3.12",
+        "typescript": "~5.8.3"
+    },
+    "private": true
 }
