--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "expo-updates": "~0.28.17",
     "firebase": "^12.4.0",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.6",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "^18.2.66",
+    "@types/react": "19.0.0",
     "expo-cli": "^6.3.12",
     "typescript": "~5.8.3"
   },
