--- a/eas.json
+++ b/eas.json
@@ -1,59 +1,66 @@
 {
-  "cli": {
-    "appVersionSource": "remote"
-  },
-  "build": {
-    "production": {
-      "env": {
-        "GOOGLE_SERVICE_PLIST": "@GOOGLE_SERVICE_PLIST"
-      },
-      "resourceClass": "medium",
-      "autoIncrement": true,
-      "distribution": "store",
-      "ios": {
-        "simulator": false
-      },
-      "channel": "production",
-      "cache": {
-        "disabled": true
-      }
-    },
-    "development": {
-      "env": {
-        "GOOGLE_SERVICE_PLIST": "@GOOGLE_SERVICE_PLIST"
-      },
-      "resourceClass": "medium",
-      "autoIncrement": true,
-      "distribution": "internal",
-      "ios": {
-        "simulator": true
-      },
-      "channel": "development",
-      "cache": {
-        "disabled": true
-      }
-    },
-    "staging": {
-      "distribution": "internal",
-      "channel": "staging",
-      "resourceClass": "medium",
-      "autoIncrement": true,
-      "ios": {
-        "simulator": false
-      }
-    },
-    "internal": {
-      "distribution": "internal",
-      "channel": "internal",
-      "resourceClass": "medium",
-      "autoIncrement": true,
-      "ios": {
-        "simulator": false
-      }
-    }
-  },
-  "submit": {
-    "production": {}
-  }
-}
+    "cli":  {
+                "appVersionSource":  "remote"
+            },
+    "build":  {
+                  "production":  {
+                                     "env":  {
+                                                 "GOOGLE_SERVICE_PLIST":  "@GOOGLE_SERVICE_PLIST"
+                                             },
+                                     "resourceClass":  "medium",
+                                     "autoIncrement":  true,
+                                     "distribution":  "store",
+                                     "ios":  {
+                                                 "simulator":  false
+                                             },
+                                     "channel":  "production",
+                                     "cache":  {
+                                                   "disabled":  true
+                                               }
+                                 },
+                  "development":  {
+                                      "env":  {
+                                                  "GOOGLE_SERVICE_PLIST":  "@GOOGLE_SERVICE_PLIST"
+                                              },
+                                      "resourceClass":  "medium",
+                                      "autoIncrement":  true,
+                                      "distribution":  "internal",
+                                      "ios":  {
+                                                  "simulator":  true
+                                              },
+                                      "channel":  "development",
+                                      "cache":  {
+                                                    "disabled":  true
+                                                }
+                                  },
+                  "staging":  {
+                                  "distribution":  "internal",
+                                  "channel":  "staging",
+                                  "resourceClass":  "medium",
+                                  "autoIncrement":  true,
+                                  "ios":  {
+                                              "simulator":  false
+                                          },
+                                  "env":  {
+                                              "EXPO_ENTRY_FILE":  "index.js"
+                                          }
+                              },
+                  "internal":  {
+                                   "distribution":  "internal",
+                                   "channel":  "internal",
+                                   "resourceClass":  "medium",
+                                   "autoIncrement":  true,
+                                   "ios":  {
+                                               "simulator":  false
+                                           },
+                                   "env":  {
+                                               "EXPO_ENTRY_FILE":  "index.js"
+                                           }
+                               }
+              },
+    "submit":  {
+                   "production":  {
 
+                                  }
+               }
+}
