--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dormdate",
   "version": "1.0.0",
-  "main":"index.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -22,6 +22,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1"
   },
@@ -33,4 +35,3 @@
   },
   "private": true
 }
-
